--- a/test/fixtures/teams.yml
+++ b/test/fixtures/teams.yml
@@ -4,8 +4,9 @@
 #
 #  id         :integer          not null, primary key
 #  name       :string
-#  logo       :string
 #  wiki       :string
+#  string     :string
+#  logo       :string
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #
@@ -14,10 +15,12 @@
 
 one:
   name: MyString
-  logo: MyString
   wiki: MyString
+  string: MyString
+  logo: MyString
 
 two:
   name: MyString
-  logo: MyString
   wiki: MyString
+  string: MyString
+  logo: MyString
